--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <div class="video-container">
       <video id="myVideo" controls>
-        <source src="https://cdn.slicedrive.com/i4GtjEmX1.mp4" type="video/mp4">
+        <source src="https://cdn.slicedrive.com/PMe7wqKO1.mp4" type="video/mp4">
         Browser Anda tidak mendukung video tag.
       </video>
     </div>
